--- a/docs/features.mdx
+++ b/docs/features.mdx
@@ -131,7 +131,7 @@ import { TopBanners } from "@site/src/components/TopBanners";
 
 - 🌟 **Enhanced RAG Pipeline**: A togglable hybrid search sub-feature for our RAG embedding feature that enhances the RAG functionality via `BM25`, with re-ranking powered by `CrossEncoder`, and configurable relevance score thresholds.
 
-- 📹 **YouTube RAG Pipeline**: Dedicated Retrieval Augmented Generation (RAG) pipeline for summaring YouTube videos via video URLs, enabling smooth interaction with video transcriptions directly.
+- 📹 **YouTube RAG Pipeline**: Dedicated Retrieval Augmented Generation (RAG) pipeline for summarizing YouTube videos via video URLs, enabling smooth interaction with video transcriptions directly.
 
 ---
 
